--- a/.gitignore
+++ b/.gitignore
@@ -384,4 +384,10 @@ healthchecksdb
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
 
+# My setting
+*.sln
+*.vcxproj
+*.vcxproj.filters
+
+
 # End of https://www.gitignore.io/api/c++,visualstudio
